@@ -107,6 +107,16 @@ trait ByteReader extends AutoCloseable {
   def readLongLE(): Long
 
   /**
+    * Extract 64 bits and interpret as a big endian unsigned integer, advancing the byte cursor by 8.
+    */
+  def readUnsignedLongBE(): BigInt
+
+  /**
+    * Extract 64 bits and interpret as a little endian unsigned integer, advancing the byte cursor by 8.
+    */
+  def readUnsignedLongLE(): BigInt
+
+  /**
    * Extract 32 bits and interpret as a big endian floating point, advancing the byte cursor by 4.
    */
   def readFloatBE(): Float
@@ -186,6 +196,10 @@ private[twitter] trait ProxyByteReader extends ByteReader {
   def readLongBE(): Long = reader.readLongBE()
 
   def readLongLE(): Long = reader.readLongLE()
+
+  def readUnsignedLongBE(): BigInt = reader.readUnsignedLongBE()
+
+  def readUnsignedLongLE(): BigInt = reader.readUnsignedLongLE()
 
   def readFloatBE(): Float = reader.readFloatBE()
 
@@ -383,6 +397,39 @@ private class ByteReaderImpl(buf: Buf) extends ByteReader {
     pos += 8
     ret
   }
+
+  def readUnsignedLongBE(): BigInt = {
+    checkRemaining(8)
+    val ret =
+      (buf.get(pos + 7) & 0xff).toLong        |
+      (buf.get(pos + 6) & 0xff).toLong <<  8  |
+      (buf.get(pos + 5) & 0xff).toLong << 16  |
+      (buf.get(pos + 4) & 0xff).toLong << 24  |
+      (buf.get(pos + 3) & 0xff).toLong << 32  |
+      (buf.get(pos + 2) & 0xff).toLong << 40  |
+      (buf.get(pos + 1) & 0xff).toLong << 48  |
+      BigInt((buf.get(pos) & 0xff).toLong) << 56
+    pos += 8
+
+    ret
+  }
+
+  def readUnsignedLongLE(): BigInt = {
+    checkRemaining(8)
+    val ret =
+      (buf.get(pos    ) & 0xff).toLong       |
+      (buf.get(pos + 1) & 0xff).toLong <<  8 |
+      (buf.get(pos + 2) & 0xff).toLong << 16 |
+      (buf.get(pos + 3) & 0xff).toLong << 24 |
+      (buf.get(pos + 4) & 0xff).toLong << 32 |
+      (buf.get(pos + 5) & 0xff).toLong << 40 |
+      (buf.get(pos + 6) & 0xff).toLong << 48 |
+      BigInt(buf.get(pos + 7) & 0xff) << 56
+    pos += 8
+
+    ret
+  }
+
 
   // - Floating Point -
   def readFloatBE(): Float = JFloat.intBitsToFloat(readIntBE())
